Basic Farmer ALPHA

--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -120,6 +120,7 @@ tile.EnergizedSolarPanel.name=Energized Solar Panel
 tile.LumumSolarPanel.name=Lumum Solar Panel
 tile.SolderingTable.name=Soldering Table
 tile.Quarry.name=Quarry
+tile.BasicFarmer.name=Basic Farmer
 
 //Blocks
 tile.StaticLamp.name=Static Lamp
