--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -174,6 +174,8 @@ tile.Condenser.name=Condenser
 tile.Distillery.name=Distillery
 tile.MechanicalSqueezer.name=Mechanical Squeezer
 
+tile.Barrel.name=Barrel
+
 //Blocks
 tile.StaticLamp.name=Static Lamp
 tile.EnergizedLamp.name=Energized Lamp
@@ -228,6 +230,7 @@ tile.LumumWood.name=Lumum Wood
 tile.StaticPlanks.name=Static Planks
 tile.EnergizedPlanks.name=Energized Planks
 tile.LumumPlanks.name=Lumum Planks
+
 
 //Fluids
 fluid.StaticFluid=§aStatic Fluid
@@ -300,6 +303,8 @@ container.Fermenter=Fermenter
 container.BasicItemFilter=Basic Item Filter
 container.UpgradedItemFilter=Upgraded Item Filter
 container.AdvancedItemFilter=Advanced Item Filter
+
+container.Barrel = Digistore;
 
 //Tools
 item.StaticWrench.name=Static Wrench
