Stablity and Esoteric Enchanter
-Begun Work on Esoteric Enchanter
-Added more JEI support
-Added TE support

--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -73,8 +73,9 @@ item.StaticPlate.name=§aStatic Plate
 item.EnergizedPlate.name=§bEnergized Plate
 item.LumumPlate.name=§eLumum Plate
 
-item.PlateMould.name=Plate Mould
-item.WireMould.name=Wire Mould
+item.PlateMould.name=Plate Mold
+item.WireMould.name=Wire Mold
+item.BlankMould.name=Blank Mold
 
 //Upgrades
 item.BasicSpeedUpgrade.name=Basic Speed Upgrade
