--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -198,6 +198,7 @@ tile.Condenser.name=Condenser
 tile.Distillery.name=Distillery
 tile.MechanicalSqueezer.name=Mechanical Squeezer
 tile.Former.name=Former
+tile.EsotericEnchanter.name=Esoteric Enchanter
 
 tile.Digistore.name=Digistore
 tile.DigistoreManager.name=Digistore Manager
@@ -333,6 +334,8 @@ container.UpgradedItemFilter=Upgraded Item Filter
 container.AdvancedItemFilter=Advanced Item Filter
 container.Digistore=Digistore
 container.DigistoreManager=Digistore Manager
+
+container.EsotericEnchanter=Esoteric Enchanter
 
 //Tools
 item.StaticWrench.name=Static Wrench
