Added Tree Farm

--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -191,6 +191,7 @@ tile.CreativeSolarPanel.name=Creative Solar Panel
 tile.SolderingTable.name=Soldering Table
 tile.Quarry.name=Quarry
 tile.BasicFarmer.name=Basic Farmer
+tile.TreeFarmer.name=Tree Farmer
 tile.ChargingStation.name=Charging Station
 tile.Fermenter.name=Fermenter
 tile.HeatingElement.name=Heating Element 
@@ -313,7 +314,8 @@ container.PoweredGrinder=Powered Grinder
 container.PoweredFurnace=Powered Furnace
 container.FusionFurnace=Fusion Furnace
 container.Multi-MachineController=Machine Controller
-container.Farmer=Crop Farmer
+container.BasicFarmer=Basic Farmer
+container.TreeFarmer=Tree Farmer
 container.StaticBattery=Static Battery
 container.EnergizedBattery=Energized Battery
 container.LumumBattery=Lumum Battery
@@ -496,9 +498,12 @@ material.lumummetal=Lumum Metal
 mode.Regular=Regular
 mode.Input=Input
 mode.Output=Output
+mode.Extra1=Extra 1
+mode.Extra2=Extra 2
+mode.Extra3=Extra 3
 mode.Disabled=Disabled
 
-gui.RF/T=RT/t
+gui.RF/T=RF/t
 gui.PowerControl=Power Control
 gui.Minimum=Minimum
 gui.Maximum=Maximum
