Pushing changes from versions 2.0.1.0 and 2.0.2.0.
Changelog on Curseforge - trying to move changelogs to here from now on.

--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -588,3 +588,6 @@ side.Left=Left
 side.Front=Front
 side.Back=Back
 
+material.staticmetal.name=§aStatic Metal
+material.energizedmetal.name=§bEnergized Metal
+material.lumummetal.name=§eLumum Metal
