Updated to Version 2.0.2.3
Changelog on Curseforge
(https://minecraft.curseforge.com/projects/static-power/files/2569600)

--- a/src/main/resources/assets/staticpower/lang/en_US.lang
+++ b/src/main/resources/assets/staticpower/lang/en_US.lang
@@ -94,6 +94,9 @@ staticpower.material.dustRuby.name=Ruby Dust
 staticpower.material.dustSapphire.name=Sapphire Dust
 staticpower.material.dustObsidian.name=Obsidian Dust
 
+staticpower.material.dustCobalt.name=Cobalt Dust
+staticpower.material.dustArdite.name=Ardite Dust
+
 staticpower.material.nuggetCopper.name=Copper Nugget
 staticpower.material.nuggetTin.name=Tin Nugget
 staticpower.material.nuggetSilver.name=Silver Nugget
