Implemented Grinder with recipes. Update Side Config to work with the UI tab.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -54,6 +54,7 @@
 	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
 	"block.staticpower.machine_powered_furnace": "Powered Furnace",
+	"block.staticpower.machine_powered_grinder": "Powered Grinder",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
 	"gui.staticpower.usage": "Usage",
