Implemented retriever and tier system from JSON

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -52,12 +52,29 @@
 	"item.staticpower.portable_battery_lumum": "Lumum Portable Battery",
 	"item.staticpower.filter_item_basic": "Basic Item Filter",
 	"item.staticpower.cable_attachment_basic_extractor": "Basic Extractor",
+	"item.staticpower.cable_attachment_advanced_extractor": "Basic Extractor",
+	"item.staticpower.cable_attachment_static_extractor": "Static Extractor",
+	"item.staticpower.cable_attachment_energized_extractor": "Energized Extractor",
+	"item.staticpower.cable_attachment_lumum_extractor": "Lumum Extractor",
+	"item.staticpower.cable_attachment_basic_filter": "Basic Filter",
+	"item.staticpower.cable_attachment_advanced_filter": "Basic Filter",
+	"item.staticpower.cable_attachment_static_filter": "Static Filter",
+	"item.staticpower.cable_attachment_energized_filter": "Energized Filter",
+	"item.staticpower.cable_attachment_lumum_filter": "Lumum Filter",
+	"item.staticpower.cable_attachment_basic_retriever": "Basic Retriever",
+	"item.staticpower.cable_attachment_advanced_retriever": "Basic Retriever",
+	"item.staticpower.cable_attachment_static_retriever": "Static Retriever",
+	"item.staticpower.cable_attachment_energized_retriever": "Energized Retriever",
+	"item.staticpower.cable_attachment_lumum_retriever": "Lumum Retriever",
 	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
 	"block.staticpower.machine_powered_furnace": "Powered Furnace",
 	"block.staticpower.machine_powered_grinder": "Powered Grinder",
 	"block.staticpower.machine_lumber_mill": "Lumber Mill",
 	"block.staticpower.machine_basic_farmer": "Basic Farmer",
+	"block.staticpower.cable_power": "Power Cable",
+	"block.staticpower.cable_fluid": "Fluid Pipe",
+	"block.staticpower.cable_item": "Item Tube",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
