Added tanks, fluid auto input/output, bugfixes, fluid container interaction

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -51,6 +51,16 @@
 	"item.staticpower.portable_battery_energized": "Energized Portable Battery",
 	"item.staticpower.portable_battery_lumum": "Lumum Portable Battery",
 	"item.staticpower.filter_item_basic": "Basic Item Filter",
+	"item.staticpower.bucket_tree_sap": "Tree Sap Bucket",
+	"item.staticpower.bucket_ethanol": "Ethanol Bucket",
+	"item.staticpower.bucket_mash": "Mash Bucket",
+	"item.staticpower.bucket_evaporated_mash": "Evaporated Mash Bucket",
+	"item.staticpower.bucket_fluid_static": "Static Fluid Bucket",
+	"item.staticpower.bucket_fluid_energized": "Energized Fluid Bucket",
+	"item.staticpower.bucket_fluid_lumum": "Lumum Fluid Bucket",
+	"item.staticpower.bucket_liquid_experience": "Liquid Experience Bucket",
+	"item.staticpower.bucket_steam": "Steam Bucket",
+	"item.staticpower.bucket_tree_oil": "Tree Oil Bucket",
 	"item.staticpower.cable_attachment_basic_extractor": "Basic Extractor",
 	"item.staticpower.cable_attachment_advanced_extractor": "Basic Extractor",
 	"item.staticpower.cable_attachment_static_extractor": "Static Extractor",
@@ -75,7 +85,17 @@
 	"block.staticpower.cable_power": "Power Cable",
 	"block.staticpower.cable_fluid": "Fluid Pipe",
 	"block.staticpower.cable_item": "Item Tube",
+	"block.staticpower.tank_basic": "Tank",
 	"fluid.staticpower.tree_sap": "Tree Sap",
+	"fluid.staticpower.ethanol": "Ethanol",
+	"fluid.staticpower.mash": "Mash",
+	"fluid.staticpower.evaporated_mash": "Evaporated Mash",
+	"fluid.staticpower.fluid_static": "Static Fluid",
+	"fluid.staticpower.fluid_energized": "Energized Fluid",
+	"fluid.staticpower.fluid_lumum": "Lumum Fluid",
+	"fluid.staticpower.liquid_experience": "Liquid Experience",
+	"fluid.staticpower.steam": "Steam",
+	"fluid.staticpower.tree_oil": "Tree Oil",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
 	"gui.staticpower.usage": "Usage",
