Added side rendering for tanks, moved digistore over to new network system, cleaned up farmer code, some general house keepingm, improved tank liquid rendering.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -104,10 +104,16 @@
 	"gui.staticpower.energy_unit_per_tick": "FE/t",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
-	"gui.staticpower.side.from": "Front",
+	"gui.staticpower.side.front": "Front",
 	"gui.staticpower.side.back": "Back",
 	"gui.staticpower.side.left": "Left",
 	"gui.staticpower.side.right": "Right",
+	"gui.staticpower.direction.up": "Up",
+	"gui.staticpower.direction.down": "Down",
+	"gui.staticpower.direction.east": "East",
+	"gui.staticpower.direction.west": "West",
+	"gui.staticpower.direction.north": "North",
+	"gui.staticpower.direction.south": "South",
 	"gui.staticpower.redstone_mode.low": "Low",
 	"gui.staticpower.redstone_mode.high": "High",
 	"gui.staticpower.redstone_mode.ignore": "Ignore",
