Added pump today and former yesterday. Tweaks fluid pipe's texture to look a little more realistic. Looking to create a couple tiers in different texture styles, and different metals. Tank and fluid cables now glow with luminous fluids inside them.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -84,6 +84,7 @@
 	"block.staticpower.machine_basic_farmer": "Basic Farmer",
 	"block.staticpower.machine_tree_farmer": "Powered Lumberjack",
 	"block.staticpower.machine_fermenter": "Fermenter",
+	"block.staticpower.machine_former": "Former",
 	"block.staticpower.cable_power": "Power Cable",
 	"block.staticpower.cable_fluid": "Fluid Pipe",
 	"block.staticpower.cable_item": "Item Tube",
