Added industrial fluid pipes, cleaned up fluid system to respect the fluid rate of pipes, added new sub-system for registering tile entites that allows the reuse of a single TE across diferent TE types.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -87,6 +87,7 @@
 	"block.staticpower.machine_former": "Former",
 	"block.staticpower.cable_power": "Power Cable",
 	"block.staticpower.cable_fluid": "Fluid Pipe",
+	"block.staticpower.cable_industrial_fluid": "Industrial Fluid Pipe",
 	"block.staticpower.cable_item": "Item Tube",
 	"block.staticpower.cable_digistore": "Digistore Cable",
 	"block.staticpower.tank_basic": "Tank",
