Cleaned up terminal, added option for each attachment to define their own bounds, updated cable connection caching code, fixed but with wrench not playing noise, stability and performance improvments-framerate doubled.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -76,6 +76,7 @@
 	"item.staticpower.cable_attachment_static_retriever": "Static Retriever",
 	"item.staticpower.cable_attachment_energized_retriever": "Energized Retriever",
 	"item.staticpower.cable_attachment_lumum_retriever": "Lumum Retriever",
+	"item.staticpower.cable_attachment_digistore_terminal": "Terminal",
 	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
 	"block.staticpower.machine_powered_furnace": "Powered Furnace",
