Added crafting terminal with most functionality completed. Started work on digistore cards. Changed digistore container sync to work off of delta changes instead of whole inventory every time. Abstracted digistore container and gui. Allowed each attachment to supply its own bounds.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -62,21 +62,27 @@
 	"item.staticpower.bucket_steam": "Steam Bucket",
 	"item.staticpower.bucket_tree_oil": "Tree Oil Bucket",
 	"item.staticpower.cable_attachment_basic_extractor": "Basic Extractor",
-	"item.staticpower.cable_attachment_advanced_extractor": "Basic Extractor",
+	"item.staticpower.cable_attachment_advanced_extractor": "Advanced Extractor",
 	"item.staticpower.cable_attachment_static_extractor": "Static Extractor",
 	"item.staticpower.cable_attachment_energized_extractor": "Energized Extractor",
 	"item.staticpower.cable_attachment_lumum_extractor": "Lumum Extractor",
 	"item.staticpower.cable_attachment_basic_filter": "Basic Filter",
-	"item.staticpower.cable_attachment_advanced_filter": "Basic Filter",
+	"item.staticpower.cable_attachment_advanced_filter": "Advanced Filter",
 	"item.staticpower.cable_attachment_static_filter": "Static Filter",
 	"item.staticpower.cable_attachment_energized_filter": "Energized Filter",
 	"item.staticpower.cable_attachment_lumum_filter": "Lumum Filter",
 	"item.staticpower.cable_attachment_basic_retriever": "Basic Retriever",
-	"item.staticpower.cable_attachment_advanced_retriever": "Basic Retriever",
+	"item.staticpower.cable_attachment_advanced_retriever": "Advanced Retriever",
 	"item.staticpower.cable_attachment_static_retriever": "Static Retriever",
 	"item.staticpower.cable_attachment_energized_retriever": "Energized Retriever",
 	"item.staticpower.cable_attachment_lumum_retriever": "Lumum Retriever",
 	"item.staticpower.cable_attachment_digistore_terminal": "Terminal",
+	"item.staticpower.cable_attachment_digistore_crafting_terminal": "Crafting Terminal",
+	"item.staticpower.digistore_card_basic": "Basic Digistore Card",
+	"item.staticpower.digistore_card_advanced": "Advanced Digistore Card",
+	"item.staticpower.digistore_card_static": "Static Digistore Card",
+	"item.staticpower.digistore_card_energized": "Energized Digistore Card",
+	"item.staticpower.digistore_card_lumum": "Lumum Digistore Card",
 	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
 	"block.staticpower.machine_powered_furnace": "Powered Furnace",
