Added in cable covers to hide cables and decorate around terminals. Started work on server rack basic implementation to expand storage capabilities.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -83,6 +83,7 @@
 	"item.staticpower.digistore_card_static": "Static Digistore Card",
 	"item.staticpower.digistore_card_energized": "Energized Digistore Card",
 	"item.staticpower.digistore_card_lumum": "Lumum Digistore Card",
+	"item.staticpower.cover": "Cover",
 	"block.staticpower.machine_charging_station": "Charging Station",
 	"block.staticpower.chest_vacuum": "Vacuum Chest",
 	"block.staticpower.machine_powered_furnace": "Powered Furnace",
@@ -101,6 +102,7 @@
 	"block.staticpower.digistore": "Digistore",
 	"block.staticpower.digistore_io_port": "Digistore I/O Port",
 	"block.staticpower.digistore_manager": "Digistore Manager",
+	"block.staticpower.digistore_server_rack": "Server Rack",
 	"block.staticpower.solar_panel_basic": "Basic Solar Panel",
 	"block.staticpower.solar_panel_static": "Static Solar Panel",
 	"block.staticpower.solar_panel_energized": "Energized Solar Panel",
