Added in batteries, made improvments to the power delivery systems. Added ablity to store data on ServerCables. Added cable reader (useful for debug). Saved upgrade changes to NBT.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -46,6 +46,7 @@
 	"item.staticpower.mold_gear": "Gear Mold",
 	"item.staticpower.mold_plate": "Plate Mold",
 	"item.staticpower.mold_wire": "Wire Mold",
+	"item.staticpower.cable_network_analyzer": "Cable Network Analyzer",
 	"item.staticpower.portable_battery_basic": "Basic Portable Battery",
 	"item.staticpower.portable_battery_static": "Static Portable Battery",
 	"item.staticpower.portable_battery_energized": "Energized Portable Battery",
